// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ErrorStep > should display error details 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <div
      class="space-y-8"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-2xl"
            data-testid="header__title"
          >
            Transaction Error
          </h1>
        </div>
      </div>
      <svg
        class="hidden w-full md:block"
        height="142"
        viewBox="0 0 550 142"
        width="550"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="images"
          transform="translate(-404 -340)"
        >
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
          >
            <path
              d="M454.184,476.9a52.5,52.5,0,1,1,55.6-57.241c.146,1.595,1.488,4.344,7.22,4.344h97"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(453 472)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(425 392)"
            >
              <circle
                cx="32.5"
                cy="32.5"
                r="32.5"
                stroke="none"
              />
              <circle
                cx="32.5"
                cy="32.5"
                fill="none"
                r="31.5"
              />
            </g>
            <path
              d="M484,407s-17.041,12.613-19,14-6,4.6-6,9v26"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1007"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1007"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M478,401s-15.94,11.4-18,13-7.1,2.131-11-1-13-11-13-11"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1008"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1008"
              stroke="#dbdee5"
              stroke-width="2"
            />
          </g>
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
          >
            <path
              d="M903.816,372.1a52.5,52.5,0,1,1-55.6,57.241c-.146-1.6-1.488-4.344-7.221-4.344H748"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_4-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050-2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(895 367)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F-2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(868 392)"
            >
              <circle
                cx="32.5"
                cy="32.5"
                r="32.5"
                stroke="none"
              />
              <circle
                cx="32.5"
                cy="32.5"
                fill="none"
                r="31.5"
              />
            </g>
            <path
              d="M874,442s17.041-12.613,19-14,6-4.6,6-9V393"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1007"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1007-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M880,448s15.94-11.4,18-13,7.1-2.131,11,1,13,11,13,11"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1008"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1008-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
          </g>
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4"
          >
            <path
              d="M631.179,442.532a52.513,52.513,0,0,0,101.469-11.917c.233-2.006,4.1-5.615,7.352-5.615h8"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 5"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_5"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M730.129,406.468a52.681,52.681,0,0,0-101.736,11.917c-.233,2.006-4.107,5.615-7.372,5.615H613"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 6"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_6"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050_\\u043A\\u043E\\u043F\\u0438\\u044F"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(726 406)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(625 434)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u0421\\u0433\\u0440\\u0443\\u043F\\u043F\\u0438\\u0440\\u043E\\u0432\\u0430\\u0442\\u044C 715"
              id="\\u0421\\u0433\\u0440\\u0443\\u043F\\u043F\\u0438\\u0440\\u043E\\u0432\\u0430\\u0442\\u044C_715"
              transform="translate(-56 -698.5)"
            >
              <g
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                fill="none"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
                stroke="#de5846"
                stroke-width="2"
                transform="translate(704 1090)"
              >
                <circle
                  cx="32.5"
                  cy="32.5"
                  r="32.5"
                  stroke="none"
                />
                <circle
                  cx="32.5"
                  cy="32.5"
                  fill="none"
                  r="31.5"
                />
              </g>
              <path
                d="M739.823,1130.253,736,1126.43l-3.823,3.823a2.447,2.447,0,0,1-3.461-3.461l3.823-3.823-3.792-3.792a2.447,2.447,0,0,1,3.461-3.46l3.792,3.792,3.792-3.792a2.447,2.447,0,0,1,3.461,3.46l-3.792,3.792,3.823,3.823a2.448,2.448,0,1,1-3.461,3.461Z"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B2086 \\u043A\\u043E\\u043F\\u0438\\u044F"
                fill="#ffe0da"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B2086_\\u043A\\u043E\\u043F\\u0438\\u044F"
                stroke="#de5846"
                stroke-width="2"
              />
              <g
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                fill="none"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_3-2"
                stroke="#de5846"
                stroke-width="2"
                transform="translate(708 1094)"
              >
                <circle
                  cx="28.5"
                  cy="28.5"
                  r="28.5"
                  stroke="none"
                />
                <circle
                  cx="28.5"
                  cy="28.5"
                  fill="none"
                  r="27.5"
                />
              </g>
            </g>
          </g>
          <path
            d="M815,475v-7H777v7h-2v-7H760v-2h15V448h2v18h38v-8h2v8h10v2H817v7Zm-240,0v-7H537v7h-2v-7H525v-2h10V454h2v12h38V456h2v10h18v2H577v7Zm-40-31v-4h-4v-2h4v-4h2v4h4v2h-4v4Zm280-45V388H805v-2h10V348H777v11h-2V348H764v-2h11v-6h2v6h38v-6h2v6h38v-6h2v6h8v2h-8v21h-2V348H817v38h16v2H817v11Zm-280,0V388H521v-2h14V348H497v11h-2V348H477v-2h18v-6h2v6h38v-6h2v6h11v2H537v38h9v2h-9v11Zm80-33V348H597v-2h18v-6h2v6h16v2H617v18Zm265-14v-4h-4v-2h4v-4h2v4h4v2h-4v4Zm-230,0v-4h-4v-2h4v-4h2v4h4v2h-4v4Z"
            data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 21"
            fill="#dbdee5"
            id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_21"
          />
        </g>
      </svg>
      <div
        class="space-y-6"
      >
        <p
          class="hidden text-theme-secondary-text md:block"
        >
          An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
        </p>
        <div
          class="flex flex-col overflow-hidden rounded-xl md:hidden"
        >
          <div
            class="css-6pjap5"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-cross"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M7 13l6-6M13 13L7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Error
            </span>
          </div>
          <div
            class="css-1y2ht9o"
          >
            An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
          />
          <div
            class="py-4 css-1prn1rr"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <textarea
                autocomplete="off"
                class="no-ligatures w-full border-none resize-none min-h-[8rem] md:min-h-auto md:resize-y resize-none text-theme-secondary-text css-1vs1awz"
                data-testid="ErrorStep__errorMessage"
                disabled=""
                style="height: 4px;"
                type="text"
              >
                Display error details
              </textarea>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-gu3ikl"
    >
      <div
        class="mr-auto"
      >
        <div
          class="relative"
        >
          <button
            class="css-6419sw"
            data-testid="clipboard-button__wrapper"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
              <span
                class="hidden sm:block"
              >
                Copy Error
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep > should emit onBack 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <div
      class="space-y-8"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-2xl"
            data-testid="header__title"
          >
            Custom error title
          </h1>
        </div>
      </div>
      <svg
        class="hidden w-full md:block"
        height="142"
        viewBox="0 0 550 142"
        width="550"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="images"
          transform="translate(-404 -340)"
        >
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
          >
            <path
              d="M454.184,476.9a52.5,52.5,0,1,1,55.6-57.241c.146,1.595,1.488,4.344,7.22,4.344h97"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(453 472)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(425 392)"
            >
              <circle
                cx="32.5"
                cy="32.5"
                r="32.5"
                stroke="none"
              />
              <circle
                cx="32.5"
                cy="32.5"
                fill="none"
                r="31.5"
              />
            </g>
            <path
              d="M484,407s-17.041,12.613-19,14-6,4.6-6,9v26"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1007"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1007"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M478,401s-15.94,11.4-18,13-7.1,2.131-11-1-13-11-13-11"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1008"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1008"
              stroke="#dbdee5"
              stroke-width="2"
            />
          </g>
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
          >
            <path
              d="M903.816,372.1a52.5,52.5,0,1,1-55.6,57.241c-.146-1.6-1.488-4.344-7.221-4.344H748"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_4-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050-2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(895 367)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F-2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(868 392)"
            >
              <circle
                cx="32.5"
                cy="32.5"
                r="32.5"
                stroke="none"
              />
              <circle
                cx="32.5"
                cy="32.5"
                fill="none"
                r="31.5"
              />
            </g>
            <path
              d="M874,442s17.041-12.613,19-14,6-4.6,6-9V393"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1007"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1007-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M880,448s15.94-11.4,18-13,7.1-2.131,11,1,13,11,13,11"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1008"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1008-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
          </g>
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4"
          >
            <path
              d="M631.179,442.532a52.513,52.513,0,0,0,101.469-11.917c.233-2.006,4.1-5.615,7.352-5.615h8"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 5"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_5"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M730.129,406.468a52.681,52.681,0,0,0-101.736,11.917c-.233,2.006-4.107,5.615-7.372,5.615H613"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 6"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_6"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050_\\u043A\\u043E\\u043F\\u0438\\u044F"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(726 406)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(625 434)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u0421\\u0433\\u0440\\u0443\\u043F\\u043F\\u0438\\u0440\\u043E\\u0432\\u0430\\u0442\\u044C 715"
              id="\\u0421\\u0433\\u0440\\u0443\\u043F\\u043F\\u0438\\u0440\\u043E\\u0432\\u0430\\u0442\\u044C_715"
              transform="translate(-56 -698.5)"
            >
              <g
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                fill="none"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
                stroke="#de5846"
                stroke-width="2"
                transform="translate(704 1090)"
              >
                <circle
                  cx="32.5"
                  cy="32.5"
                  r="32.5"
                  stroke="none"
                />
                <circle
                  cx="32.5"
                  cy="32.5"
                  fill="none"
                  r="31.5"
                />
              </g>
              <path
                d="M739.823,1130.253,736,1126.43l-3.823,3.823a2.447,2.447,0,0,1-3.461-3.461l3.823-3.823-3.792-3.792a2.447,2.447,0,0,1,3.461-3.46l3.792,3.792,3.792-3.792a2.447,2.447,0,0,1,3.461,3.46l-3.792,3.792,3.823,3.823a2.448,2.448,0,1,1-3.461,3.461Z"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B2086 \\u043A\\u043E\\u043F\\u0438\\u044F"
                fill="#ffe0da"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B2086_\\u043A\\u043E\\u043F\\u0438\\u044F"
                stroke="#de5846"
                stroke-width="2"
              />
              <g
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                fill="none"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_3-2"
                stroke="#de5846"
                stroke-width="2"
                transform="translate(708 1094)"
              >
                <circle
                  cx="28.5"
                  cy="28.5"
                  r="28.5"
                  stroke="none"
                />
                <circle
                  cx="28.5"
                  cy="28.5"
                  fill="none"
                  r="27.5"
                />
              </g>
            </g>
          </g>
          <path
            d="M815,475v-7H777v7h-2v-7H760v-2h15V448h2v18h38v-8h2v8h10v2H817v7Zm-240,0v-7H537v7h-2v-7H525v-2h10V454h2v12h38V456h2v10h18v2H577v7Zm-40-31v-4h-4v-2h4v-4h2v4h4v2h-4v4Zm280-45V388H805v-2h10V348H777v11h-2V348H764v-2h11v-6h2v6h38v-6h2v6h38v-6h2v6h8v2h-8v21h-2V348H817v38h16v2H817v11Zm-280,0V388H521v-2h14V348H497v11h-2V348H477v-2h18v-6h2v6h38v-6h2v6h11v2H537v38h9v2h-9v11Zm80-33V348H597v-2h18v-6h2v6h16v2H617v18Zm265-14v-4h-4v-2h4v-4h2v4h4v2h-4v4Zm-230,0v-4h-4v-2h4v-4h2v4h4v2h-4v4Z"
            data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 21"
            fill="#dbdee5"
            id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_21"
          />
        </g>
      </svg>
      <div
        class="space-y-6"
      >
        <p
          class="hidden text-theme-secondary-text md:block"
        >
          An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
        </p>
        <div
          class="flex flex-col overflow-hidden rounded-xl md:hidden"
        >
          <div
            class="css-6pjap5"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-cross"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M7 13l6-6M13 13L7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Error
            </span>
          </div>
          <div
            class="css-1y2ht9o"
          >
            An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
          />
          <div
            class="py-4 css-1prn1rr"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <textarea
                autocomplete="off"
                class="no-ligatures w-full border-none resize-none min-h-[8rem] md:min-h-auto md:resize-y resize-none text-theme-secondary-text css-1vs1awz"
                data-testid="ErrorStep__errorMessage"
                disabled=""
                style="height: 4px;"
                type="text"
              >
                test
              </textarea>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-gu3ikl"
    >
      <div
        class="mr-auto"
      >
        <div
          class="relative"
        >
          <button
            class="css-6419sw"
            data-testid="clipboard-button__wrapper"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
              <span
                class="hidden sm:block"
              >
                Copy Error
              </span>
            </div>
          </button>
        </div>
      </div>
      <button
        class="css-fl4fi0"
        data-testid="ErrorStep__back-button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="whitespace-nowrap"
          >
            Back
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep > should emit onClose 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <div
      class="space-y-8"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-2xl"
            data-testid="header__title"
          >
            Custom error title
          </h1>
        </div>
      </div>
      <svg
        class="hidden w-full md:block"
        height="142"
        viewBox="0 0 550 142"
        width="550"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="images"
          transform="translate(-404 -340)"
        >
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
          >
            <path
              d="M454.184,476.9a52.5,52.5,0,1,1,55.6-57.241c.146,1.595,1.488,4.344,7.22,4.344h97"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(453 472)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(425 392)"
            >
              <circle
                cx="32.5"
                cy="32.5"
                r="32.5"
                stroke="none"
              />
              <circle
                cx="32.5"
                cy="32.5"
                fill="none"
                r="31.5"
              />
            </g>
            <path
              d="M484,407s-17.041,12.613-19,14-6,4.6-6,9v26"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1007"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1007"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M478,401s-15.94,11.4-18,13-7.1,2.131-11-1-13-11-13-11"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1008"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1008"
              stroke="#dbdee5"
              stroke-width="2"
            />
          </g>
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
          >
            <path
              d="M903.816,372.1a52.5,52.5,0,1,1-55.6,57.241c-.146-1.6-1.488-4.344-7.221-4.344H748"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_4-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050-2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(895 367)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F-2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(868 392)"
            >
              <circle
                cx="32.5"
                cy="32.5"
                r="32.5"
                stroke="none"
              />
              <circle
                cx="32.5"
                cy="32.5"
                fill="none"
                r="31.5"
              />
            </g>
            <path
              d="M874,442s17.041-12.613,19-14,6-4.6,6-9V393"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1007"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1007-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M880,448s15.94-11.4,18-13,7.1-2.131,11,1,13,11,13,11"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1008"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1008-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
          </g>
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4"
          >
            <path
              d="M631.179,442.532a52.513,52.513,0,0,0,101.469-11.917c.233-2.006,4.1-5.615,7.352-5.615h8"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 5"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_5"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M730.129,406.468a52.681,52.681,0,0,0-101.736,11.917c-.233,2.006-4.107,5.615-7.372,5.615H613"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 6"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_6"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050_\\u043A\\u043E\\u043F\\u0438\\u044F"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(726 406)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(625 434)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u0421\\u0433\\u0440\\u0443\\u043F\\u043F\\u0438\\u0440\\u043E\\u0432\\u0430\\u0442\\u044C 715"
              id="\\u0421\\u0433\\u0440\\u0443\\u043F\\u043F\\u0438\\u0440\\u043E\\u0432\\u0430\\u0442\\u044C_715"
              transform="translate(-56 -698.5)"
            >
              <g
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                fill="none"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
                stroke="#de5846"
                stroke-width="2"
                transform="translate(704 1090)"
              >
                <circle
                  cx="32.5"
                  cy="32.5"
                  r="32.5"
                  stroke="none"
                />
                <circle
                  cx="32.5"
                  cy="32.5"
                  fill="none"
                  r="31.5"
                />
              </g>
              <path
                d="M739.823,1130.253,736,1126.43l-3.823,3.823a2.447,2.447,0,0,1-3.461-3.461l3.823-3.823-3.792-3.792a2.447,2.447,0,0,1,3.461-3.46l3.792,3.792,3.792-3.792a2.447,2.447,0,0,1,3.461,3.46l-3.792,3.792,3.823,3.823a2.448,2.448,0,1,1-3.461,3.461Z"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B2086 \\u043A\\u043E\\u043F\\u0438\\u044F"
                fill="#ffe0da"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B2086_\\u043A\\u043E\\u043F\\u0438\\u044F"
                stroke="#de5846"
                stroke-width="2"
              />
              <g
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                fill="none"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_3-2"
                stroke="#de5846"
                stroke-width="2"
                transform="translate(708 1094)"
              >
                <circle
                  cx="28.5"
                  cy="28.5"
                  r="28.5"
                  stroke="none"
                />
                <circle
                  cx="28.5"
                  cy="28.5"
                  fill="none"
                  r="27.5"
                />
              </g>
            </g>
          </g>
          <path
            d="M815,475v-7H777v7h-2v-7H760v-2h15V448h2v18h38v-8h2v8h10v2H817v7Zm-240,0v-7H537v7h-2v-7H525v-2h10V454h2v12h38V456h2v10h18v2H577v7Zm-40-31v-4h-4v-2h4v-4h2v4h4v2h-4v4Zm280-45V388H805v-2h10V348H777v11h-2V348H764v-2h11v-6h2v6h38v-6h2v6h38v-6h2v6h8v2h-8v21h-2V348H817v38h16v2H817v11Zm-280,0V388H521v-2h14V348H497v11h-2V348H477v-2h18v-6h2v6h38v-6h2v6h11v2H537v38h9v2h-9v11Zm80-33V348H597v-2h18v-6h2v6h16v2H617v18Zm265-14v-4h-4v-2h4v-4h2v4h4v2h-4v4Zm-230,0v-4h-4v-2h4v-4h2v4h4v2h-4v4Z"
            data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 21"
            fill="#dbdee5"
            id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_21"
          />
        </g>
      </svg>
      <div
        class="space-y-6"
      >
        <p
          class="hidden text-theme-secondary-text md:block"
        >
          An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
        </p>
        <div
          class="flex flex-col overflow-hidden rounded-xl md:hidden"
        >
          <div
            class="css-6pjap5"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-cross"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M7 13l6-6M13 13L7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Error
            </span>
          </div>
          <div
            class="css-1y2ht9o"
          >
            An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
          />
          <div
            class="py-4 css-1prn1rr"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <textarea
                autocomplete="off"
                class="no-ligatures w-full border-none resize-none min-h-[8rem] md:min-h-auto md:resize-y resize-none text-theme-secondary-text css-1vs1awz"
                data-testid="ErrorStep__errorMessage"
                disabled=""
                style="height: 4px;"
                type="text"
              >
                test
              </textarea>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-gu3ikl"
    >
      <div
        class="mr-auto"
      >
        <div
          class="relative"
        >
          <button
            class="css-6419sw"
            data-testid="clipboard-button__wrapper"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
              <span
                class="hidden sm:block"
              >
                Copy Error
              </span>
            </div>
          </button>
        </div>
      </div>
      <button
        class="css-6419sw"
        data-testid="ErrorStep__close-button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="whitespace-nowrap"
          >
            Close
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep > should render with custom title 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <div
      class="space-y-8"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-2xl"
            data-testid="header__title"
          >
            Custom error title
          </h1>
        </div>
      </div>
      <svg
        class="hidden w-full md:block"
        height="142"
        viewBox="0 0 550 142"
        width="550"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="images"
          transform="translate(-404 -340)"
        >
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
          >
            <path
              d="M454.184,476.9a52.5,52.5,0,1,1,55.6-57.241c.146,1.595,1.488,4.344,7.22,4.344h97"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(453 472)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(425 392)"
            >
              <circle
                cx="32.5"
                cy="32.5"
                r="32.5"
                stroke="none"
              />
              <circle
                cx="32.5"
                cy="32.5"
                fill="none"
                r="31.5"
              />
            </g>
            <path
              d="M484,407s-17.041,12.613-19,14-6,4.6-6,9v26"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1007"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1007"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M478,401s-15.94,11.4-18,13-7.1,2.131-11-1-13-11-13-11"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1008"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1008"
              stroke="#dbdee5"
              stroke-width="2"
            />
          </g>
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
          >
            <path
              d="M903.816,372.1a52.5,52.5,0,1,1-55.6,57.241c-.146-1.6-1.488-4.344-7.221-4.344H748"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_4-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050-2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(895 367)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F-2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(868 392)"
            >
              <circle
                cx="32.5"
                cy="32.5"
                r="32.5"
                stroke="none"
              />
              <circle
                cx="32.5"
                cy="32.5"
                fill="none"
                r="31.5"
              />
            </g>
            <path
              d="M874,442s17.041-12.613,19-14,6-4.6,6-9V393"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1007"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1007-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M880,448s15.94-11.4,18-13,7.1-2.131,11,1,13,11,13,11"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1008"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1008-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
          </g>
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4"
          >
            <path
              d="M631.179,442.532a52.513,52.513,0,0,0,101.469-11.917c.233-2.006,4.1-5.615,7.352-5.615h8"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 5"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_5"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M730.129,406.468a52.681,52.681,0,0,0-101.736,11.917c-.233,2.006-4.107,5.615-7.372,5.615H613"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 6"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_6"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050_\\u043A\\u043E\\u043F\\u0438\\u044F"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(726 406)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(625 434)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u0421\\u0433\\u0440\\u0443\\u043F\\u043F\\u0438\\u0440\\u043E\\u0432\\u0430\\u0442\\u044C 715"
              id="\\u0421\\u0433\\u0440\\u0443\\u043F\\u043F\\u0438\\u0440\\u043E\\u0432\\u0430\\u0442\\u044C_715"
              transform="translate(-56 -698.5)"
            >
              <g
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                fill="none"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
                stroke="#de5846"
                stroke-width="2"
                transform="translate(704 1090)"
              >
                <circle
                  cx="32.5"
                  cy="32.5"
                  r="32.5"
                  stroke="none"
                />
                <circle
                  cx="32.5"
                  cy="32.5"
                  fill="none"
                  r="31.5"
                />
              </g>
              <path
                d="M739.823,1130.253,736,1126.43l-3.823,3.823a2.447,2.447,0,0,1-3.461-3.461l3.823-3.823-3.792-3.792a2.447,2.447,0,0,1,3.461-3.46l3.792,3.792,3.792-3.792a2.447,2.447,0,0,1,3.461,3.46l-3.792,3.792,3.823,3.823a2.448,2.448,0,1,1-3.461,3.461Z"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B2086 \\u043A\\u043E\\u043F\\u0438\\u044F"
                fill="#ffe0da"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B2086_\\u043A\\u043E\\u043F\\u0438\\u044F"
                stroke="#de5846"
                stroke-width="2"
              />
              <g
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                fill="none"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_3-2"
                stroke="#de5846"
                stroke-width="2"
                transform="translate(708 1094)"
              >
                <circle
                  cx="28.5"
                  cy="28.5"
                  r="28.5"
                  stroke="none"
                />
                <circle
                  cx="28.5"
                  cy="28.5"
                  fill="none"
                  r="27.5"
                />
              </g>
            </g>
          </g>
          <path
            d="M815,475v-7H777v7h-2v-7H760v-2h15V448h2v18h38v-8h2v8h10v2H817v7Zm-240,0v-7H537v7h-2v-7H525v-2h10V454h2v12h38V456h2v10h18v2H577v7Zm-40-31v-4h-4v-2h4v-4h2v4h4v2h-4v4Zm280-45V388H805v-2h10V348H777v11h-2V348H764v-2h11v-6h2v6h38v-6h2v6h38v-6h2v6h8v2h-8v21h-2V348H817v38h16v2H817v11Zm-280,0V388H521v-2h14V348H497v11h-2V348H477v-2h18v-6h2v6h38v-6h2v6h11v2H537v38h9v2h-9v11Zm80-33V348H597v-2h18v-6h2v6h16v2H617v18Zm265-14v-4h-4v-2h4v-4h2v4h4v2h-4v4Zm-230,0v-4h-4v-2h4v-4h2v4h4v2h-4v4Z"
            data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 21"
            fill="#dbdee5"
            id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_21"
          />
        </g>
      </svg>
      <div
        class="space-y-6"
      >
        <p
          class="hidden text-theme-secondary-text md:block"
        >
          An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
        </p>
        <div
          class="flex flex-col overflow-hidden rounded-xl md:hidden"
        >
          <div
            class="css-6pjap5"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-cross"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M7 13l6-6M13 13L7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Error
            </span>
          </div>
          <div
            class="css-1y2ht9o"
          >
            An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
          />
          <div
            class="py-4 css-1prn1rr"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <textarea
                autocomplete="off"
                class="no-ligatures w-full border-none resize-none min-h-[8rem] md:min-h-auto md:resize-y resize-none text-theme-secondary-text css-1vs1awz"
                data-testid="ErrorStep__errorMessage"
                disabled=""
                style="height: 4px;"
                type="text"
              >
                test
              </textarea>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-gu3ikl"
    >
      <div
        class="mr-auto"
      >
        <div
          class="relative"
        >
          <button
            class="css-6419sw"
            data-testid="clipboard-button__wrapper"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
              <span
                class="hidden sm:block"
              >
                Copy Error
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep > should render with default texts 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <div
      class="space-y-8"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-2xl"
            data-testid="header__title"
          >
            Transaction Error
          </h1>
        </div>
      </div>
      <svg
        class="hidden w-full md:block"
        height="142"
        viewBox="0 0 550 142"
        width="550"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="images"
          transform="translate(-404 -340)"
        >
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
          >
            <path
              d="M454.184,476.9a52.5,52.5,0,1,1,55.6-57.241c.146,1.595,1.488,4.344,7.22,4.344h97"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(453 472)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(425 392)"
            >
              <circle
                cx="32.5"
                cy="32.5"
                r="32.5"
                stroke="none"
              />
              <circle
                cx="32.5"
                cy="32.5"
                fill="none"
                r="31.5"
              />
            </g>
            <path
              d="M484,407s-17.041,12.613-19,14-6,4.6-6,9v26"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1007"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1007"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M478,401s-15.94,11.4-18,13-7.1,2.131-11-1-13-11-13-11"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1008"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1008"
              stroke="#dbdee5"
              stroke-width="2"
            />
          </g>
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
          >
            <path
              d="M903.816,372.1a52.5,52.5,0,1,1-55.6,57.241c-.146-1.6-1.488-4.344-7.221-4.344H748"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_4-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050-2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(895 367)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F-2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(868 392)"
            >
              <circle
                cx="32.5"
                cy="32.5"
                r="32.5"
                stroke="none"
              />
              <circle
                cx="32.5"
                cy="32.5"
                fill="none"
                r="31.5"
              />
            </g>
            <path
              d="M874,442s17.041-12.613,19-14,6-4.6,6-9V393"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1007"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1007-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M880,448s15.94-11.4,18-13,7.1-2.131,11,1,13,11,13,11"
              data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1008"
              fill="none"
              id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1008-2"
              stroke="#dbdee5"
              stroke-width="2"
            />
          </g>
          <g
            data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 4"
            id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_4"
          >
            <path
              d="M631.179,442.532a52.513,52.513,0,0,0,101.469-11.917c.233-2.006,4.1-5.615,7.352-5.615h8"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 5"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_5"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <path
              d="M730.129,406.468a52.681,52.681,0,0,0-101.736,11.917c-.233,2.006-4.107,5.615-7.372,5.615H613"
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 6"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_6"
              stroke="#dbdee5"
              stroke-width="2"
            />
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050_\\u043A\\u043E\\u043F\\u0438\\u044F"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(726 406)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2050 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
              fill="none"
              id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2050_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(625 434)"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
                stroke="none"
              />
              <circle
                cx="5"
                cy="5"
                fill="none"
                r="4"
              />
            </g>
            <g
              data-name="\\u0421\\u0433\\u0440\\u0443\\u043F\\u043F\\u0438\\u0440\\u043E\\u0432\\u0430\\u0442\\u044C 715"
              id="\\u0421\\u0433\\u0440\\u0443\\u043F\\u043F\\u0438\\u0440\\u043E\\u0432\\u0430\\u0442\\u044C_715"
              transform="translate(-56 -698.5)"
            >
              <g
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                fill="none"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
                stroke="#de5846"
                stroke-width="2"
                transform="translate(704 1090)"
              >
                <circle
                  cx="32.5"
                  cy="32.5"
                  r="32.5"
                  stroke="none"
                />
                <circle
                  cx="32.5"
                  cy="32.5"
                  fill="none"
                  r="31.5"
                />
              </g>
              <path
                d="M739.823,1130.253,736,1126.43l-3.823,3.823a2.447,2.447,0,0,1-3.461-3.461l3.823-3.823-3.792-3.792a2.447,2.447,0,0,1,3.461-3.46l3.792,3.792,3.792-3.792a2.447,2.447,0,0,1,3.461,3.46l-3.792,3.792,3.823,3.823a2.448,2.448,0,1,1-3.461,3.461Z"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B2086 \\u043A\\u043E\\u043F\\u0438\\u044F"
                fill="#ffe0da"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B2086_\\u043A\\u043E\\u043F\\u0438\\u044F"
                stroke="#de5846"
                stroke-width="2"
              />
              <g
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 2047 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                fill="none"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_2047_\\u043A\\u043E\\u043F\\u0438\\u044F_3-2"
                stroke="#de5846"
                stroke-width="2"
                transform="translate(708 1094)"
              >
                <circle
                  cx="28.5"
                  cy="28.5"
                  r="28.5"
                  stroke="none"
                />
                <circle
                  cx="28.5"
                  cy="28.5"
                  fill="none"
                  r="27.5"
                />
              </g>
            </g>
          </g>
          <path
            d="M815,475v-7H777v7h-2v-7H760v-2h15V448h2v18h38v-8h2v8h10v2H817v7Zm-240,0v-7H537v7h-2v-7H525v-2h10V454h2v12h38V456h2v10h18v2H577v7Zm-40-31v-4h-4v-2h4v-4h2v4h4v2h-4v4Zm280-45V388H805v-2h10V348H777v11h-2V348H764v-2h11v-6h2v6h38v-6h2v6h38v-6h2v6h8v2h-8v21h-2V348H817v38h16v2H817v11Zm-280,0V388H521v-2h14V348H497v11h-2V348H477v-2h18v-6h2v6h38v-6h2v6h11v2H537v38h9v2h-9v11Zm80-33V348H597v-2h18v-6h2v6h16v2H617v18Zm265-14v-4h-4v-2h4v-4h2v4h4v2h-4v4Zm-230,0v-4h-4v-2h4v-4h2v4h4v2h-4v4Z"
            data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 21"
            fill="#dbdee5"
            id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_21"
          />
        </g>
      </svg>
      <div
        class="space-y-6"
      >
        <p
          class="hidden text-theme-secondary-text md:block"
        >
          An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
        </p>
        <div
          class="flex flex-col overflow-hidden rounded-xl md:hidden"
        >
          <div
            class="css-6pjap5"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-cross"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M7 13l6-6M13 13L7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Error
            </span>
          </div>
          <div
            class="css-1y2ht9o"
          >
            An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
          />
          <div
            class="py-4 css-1prn1rr"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <textarea
                autocomplete="off"
                class="no-ligatures w-full border-none resize-none min-h-[8rem] md:min-h-auto md:resize-y resize-none text-theme-secondary-text css-1vs1awz"
                data-testid="ErrorStep__errorMessage"
                disabled=""
                style="height: 4px;"
                type="text"
              >
                test
              </textarea>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-gu3ikl"
    >
      <div
        class="mr-auto"
      >
        <div
          class="relative"
        >
          <button
            class="css-6419sw"
            data-testid="clipboard-button__wrapper"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
              <span
                class="hidden sm:block"
              >
                Copy Error
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
